--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:
   port: 8003
+
+spring:
+  datasource:
+    url: jdbc:mysql://127.0.0.1/captcha?autoReconnect=true&useSSL=false
+    username: captcha
+    password: captcha
