添加:添加验证目标获取

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,7 @@ spring:
     url: jdbc:mysql://127.0.0.1/captcha?autoReconnect=true&useSSL=false
     username: captcha
     password: captcha
+
+service:
+  detector:
+    url: https://kyfw.12306.cn/passport/captcha/captcha-image64?login_site=E&module=login&rand=sjrand&1543558363631&callback=jQuery19104340823452365097_1543558357966&_=1543558357968
