--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
-            <version>2.1.0.M1</version>
+            <version>2.0.2.RELEASE</version>
         </dependency>
         <!-- 启用服务发现客户端 -->
         <dependency>
