添加：添加数据库批处理，添加detector列索引

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://127.0.0.1/captcha?autoReconnect=true&useSSL=false
+    url: jdbc:mysql://127.0.0.1/captcha?rewriteBatchedStatements=true&autoReconnect=true&useSSL=false
     username: captcha
     password: captcha
 
