修改:修改线程池配置 添加校验码服务

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    url: jdbc:mysql://127.0.0.1/captcha?rewriteBatchedStatements=true&autoReconnect=true&useSSL=false
-    username: captcha
-    password: captcha
+    url: jdbc:mysql://132.232.113.55/captcha?rewriteBatchedStatements=true&autoReconnect=true&useSSL=false
+    username: springBoot
+    password: root
 
 service:
   captcha:
